<resources>
    <string name="app_name">Time By Key</string>
    <string name="action_settings">Find by key</string>

    <string name="editar">editar</string>
    <string name="excluir">Excluir</string>
    <string name="descricao">Descrição</string>
    <string name="Início" />
    <string name="inicio">Início</string>
    <string name="Fim">Fim</string>
    <string name="salvar">Salvar</string>
    <string name="horas">Horas</string>
    <string name="minutos">Minutos</string>
    <string name="dia">Dia</string>
    <string name="mes">Mês</string>
    <string name="ano">Ano</string>
    <string name="key">Key</string>
    <string name="date_ini">Data início</string>
    <string name="data_im">Data fim</string>
</resources>
